add AppConfig and RabbitMqConfig